added flipping animation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <h1 class="top-writing">WE'RE LAUNCHING SOON</h1>
   <div class="card-container">
     <div class="card">
+      <h1 class="card-back-text card-text days">08</h1>
       <div class="card-top">
         <h1 class="card-top-text card-text days">08</h1>
       </div>
@@ -28,6 +29,7 @@
       </div>
     </div>
     <div class="card">
+      <h1 class="card-back-text card-text hours">23</h1>
       <div class="card-top">
         <h1 class="card-top-text card-text hours">23</h1>
       </div>
@@ -36,6 +38,7 @@
       </div>
     </div>
     <div class="card">
+      <h1 class="card-back-text card-text minutes">55</h1>
       <div class="card-top">
         <h1 class="card-top-text card-text minutes">55</h1>
       </div>
@@ -44,6 +47,7 @@
       </div>
     </div>
     <div class="card">
+      <h1 class="card-back-text card-text seconds">41</h1>
       <div class="card-top">
         <h1 class="card-top-text card-text seconds">41</h1>
       </div>
